alignment fixes

--- a/public/assets/css/narayam.css
+++ b/public/assets/css/narayam.css
@@ -6846,7 +6846,7 @@ h3.common-head {
   }
 }
 .container {
-    margin-top: 100px
+    margin-top: 20px
 }
 
 .box1 img,
